# better-alttab

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: Config.cpp  Config.h  GameEventHandler.cpp  GameEventHandler.h  PCH.h  Plugin.cpp  SkseMessagingListener.h  WindowProc.cpp  WindowProc.h  Xaudio.cpp  Xaudio.h
